--- a/package.json
+++ b/package.json
@@ -74,10 +74,10 @@
     "tailwindcss": "^3.2.4"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
+    "src/**/*.{jsx,tsx}": [
       "eslint --fix --config .eslintrc.js"
     ],
-    "!(src/**/*.{js,jsx,ts,tsx})": [
+    "!(src/**/*.{jsx,tsx})": [
       "prettier --fix --ignore-unknown"
     ]
   }
