--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.1.3",
+    "http-status": "^1.5.3",
     "i18next": "^22.0.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
