--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.9.0",
     "@tanstack/react-table": "^8.6.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -13,11 +14,13 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.1.3",
+    "framer-motion": "^7.6.12",
     "http-status": "^1.5.3",
     "i18next": "^22.0.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.5",
     "react-i18next": "^12.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
@@ -25,7 +28,8 @@
     "sass": "^1.56.1",
     "tailwind-merge": "^1.8.0",
     "typescript": "*",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
