--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.56.1",
     "tailwind-merge": "^1.8.0",
-    "typescript": "*",
+    "typescript": "^4.9.3",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
@@ -68,8 +68,8 @@
     "@commitlint/config-conventional": "^17.3.0",
     "@testing-library/dom": "^8.19.0",
     "@types/lodash": "^4.14.189",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.44.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.13",
     "craco": "^0.0.3",
     "eslint": "^8.0.1",
