--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.1.3",
+    "dayjs": "^1.11.6",
     "framer-motion": "^7.6.12",
     "http-status": "^1.5.3",
     "i18next": "^22.0.6",
@@ -31,6 +32,7 @@
     "sass": "^1.56.1",
     "tailwind-merge": "^1.8.0",
     "typescript": "^4.9.3",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
@@ -69,6 +71,7 @@
     "@commitlint/config-conventional": "^17.3.0",
     "@testing-library/dom": "^8.19.0",
     "@types/lodash": "^4.14.189",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.13",
