chore(vscode): update color configs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,22 @@
 {
   "workbench.colorCustomizations": {
-    "titleBar.activeBackground": "#50577A",
-    "titleBar.activeForeground": "#EDFFF3"
-  }
+    "titleBar.activeBackground": "#534449",
+    "titleBar.activeForeground": "#e7e7e7",
+    "activityBar.activeBackground": "#6f5b62",
+    "activityBar.background": "#6f5b62",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#5fa738",
+    "activityBarBadge.foreground": "#15202b",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#6f5b62",
+    "statusBar.background": "#534449",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#6f5b62",
+    "statusBarItem.remoteBackground": "#534449",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#53444999",
+    "titleBar.inactiveForeground": "#e7e7e799"
+  },
+  "peacock.remoteColor": "#534449"
 }
