--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true,
+    "source.organizeImports": true
+  },
   "workbench.colorCustomizations": {
     "titleBar.activeBackground": "#534449",
     "titleBar.activeForeground": "#e7e7e7",
