--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-REACT_APP_FRONTEND_WEBSITE_NAME="Encacap RE - Dashboard"
-REACT_APP_BACKEND_API_URL="https://apis.re.encacap.com"
+REACT_APP_FRONTEND_WEBSITE_NAME = "Encacap RE - Dashboard"
+REACT_APP_BACKEND_API_URL = "https://apis.re.encacap.com"
+REACT_APP_TINY_API_KEY = "tiny_api_key"
 
 # CRA
-HTTPS=true
-PORT=4002
-HOST="dashboard.baolocre.encacap.com"
-SSL_CRT_FILE="./.certs/encacap.com.crt"
-SSL_KEY_FILE="./.certs/encacap.com.key"
+HTTPS = true
+PORT = 4002
+HOST = "dashboard.baolocre.encacap.com"
+SSL_CRT_FILE = "./.certs/encacap.com.crt"
+SSL_KEY_FILE = "./.certs/encacap.com.key"
