feat: estate item UI

--- a/.docker/dev/docker-compose.yml
+++ b/.docker/dev/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - ../../.env.development
     networks:
       - encacap-re-network
+    restart: unless-stopped
 
 networks:
   encacap-re-network:
