--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
     "sass": "^1.56.1",
+    "striptags": "^3.2.0",
     "tailwind-merge": "^1.8.0",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0",
