--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.9",
     "axios": "^1.1.3",
     "dayjs": "^1.11.6",
+    "encacap": "^1.2.7",
     "framer-motion": "^7.6.12",
     "http-status": "^1.5.3",
     "i18next": "^22.0.6",
@@ -40,7 +41,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "craco start --max-old-space-size=10240",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
