--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     "striptags": "^3.2.0",
     "tailwind-merge": "^1.8.0",
     "typescript": "^4.9.3",
+    "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "craco start --max-old-space-size=10240",
+    "start": "craco --max-old-space-size=10240 start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
