--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@encacap-group/types": "^1.2.4",
     "@headlessui/react": "^1.7.4",
     "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.9.0",
@@ -18,7 +19,6 @@
     "@types/react-dom": "^18.0.9",
     "axios": "^1.1.3",
     "dayjs": "^1.11.6",
-    "encacap": "^1.2.7",
     "framer-motion": "^7.6.12",
     "http-status": "^1.5.3",
     "i18next": "^22.0.6",
