chore: update env name to be compatible with the submodule

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,3 @@
-REACT_APP_FRONTEND_WEBSITE_NAME = "Encacap RE - Dashboard"
-REACT_APP_BACKEND_API_URL = "https://apis.re.encacap.com"
-REACT_APP_TINY_API_KEY = "tiny_api_key"
-
-# CRA
-HTTPS = true
-PORT = 4002
-HOST = "dashboard.baolocre.encacap.com"
-SSL_CRT_FILE = "./.certs/encacap.com.crt"
-SSL_KEY_FILE = "./.certs/encacap.com.key"
+REACT_APP_RE_DASH_APP_NAME = "Encacap RE - Dashboard"
+REACT_APP_RE_DASH_APP_API_URL = "https://apis.re.encacap.com"
+REACT_APP_RE_DASH_APP_TINY_API_KEY = "tiny_api_key"
