feat: move category container to common

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,10 @@
       "@constants/*": ["./src/app/Constants/*"],
       "@services/*": ["./src/app/Services/*"],
       "@slices/*": ["./src/app/Slices/*"],
+      "@selectors/*": ["./src/app/Selectors/*"],
       "@interfaces/*": ["./src/app/Types/*"],
       "@components/*": ["./src/features/Common/Components/*"],
+      "@containers/*": ["./src/features/Common/Containers/*"],
       "@hooks/*": ["./src/features/Common/Hooks/*"],
       "@utils/*": ["./src/features/Common/Utils/*"],
       "@locales/*": ["./src/locales/*"],
