feat: add post feature for admin

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 REACT_APP_RE_DASH_APP_NAME = "Encacap RE - Dashboard"
 REACT_APP_RE_DASH_APP_API_URL = "https://apis.re.encacap.com"
 REACT_APP_RE_DASH_APP_TINY_API_KEY = "tiny_api_key"
+
+## DEV
+# If you use `encacap` repository, please see `.docker/{{env}}/docker-compose.yml` and `.env.{{env}}` files.
+RE_DASH_APP_HOST = "dashboard.re.encacap.dev"
+RE_DASH_APP_PORT = 3012
