--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@encacap-group/common": "^1.6.23",
+    "@encacap-group/common": "^1.7.0",
     "@headlessui/react": "^1.7.4",
     "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.9.0",
@@ -35,6 +35,7 @@
     "sass": "^1.56.1",
     "striptags": "^3.2.0",
     "tailwind-merge": "^1.8.0",
+    "tinymce": "^6.4.2",
     "typescript": "^4.9.3",
     "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0",
@@ -43,6 +44,7 @@
   },
   "scripts": {
     "start": "craco start",
+    "start:dev": "dotenv -e .env.development yarn start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
@@ -81,6 +83,7 @@
     "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.13",
     "craco": "^0.0.3",
+    "dotenv-cli": "^7.2.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -92,6 +95,7 @@
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.19",
+    "postcss-import": "^15.1.0",
     "postinstall": "^0.8.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
