--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
+    "react-tooltip": "^5.13.1",
     "sass": "^1.56.1",
     "striptags": "^3.2.0",
     "tailwind-merge": "^1.8.0",
