--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.3.6",
     "dayjs": "^1.11.6",
     "framer-motion": "^7.6.12",
+    "html-entities": "^2.3.5",
     "http-status": "^1.5.3",
     "i18next": "^22.0.6",
     "lodash": "^4.17.21",
