--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.13",
     "craco": "^0.0.3",
+    "dotenv": "^16.3.1",
     "dotenv-cli": "^7.2.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
