chore: remove postinstall script

--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
-    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
-    "postinstall": "npx husky install"
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix"
   },
   "eslintConfig": {
     "extends": [
