--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.2",
     "react-tooltip": "^5.13.1",
     "sass": "^1.56.1",
@@ -75,8 +75,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
-    "@babel/plugin-syntax-flow": "^7.18.6",
-    "@babel/plugin-transform-react-jsx": "^7.19.0",
+    "@babel/plugin-syntax-flow": "^7.22.5",
+    "@babel/plugin-transform-react-jsx": "^7.22.5",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@testing-library/dom": "^8.19.0",
