--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@headlessui/react": "^1.7.4",
     "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.9.0",
-    "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-table": "^8.9.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -75,17 +74,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-syntax-flow": "^7.22.5",
     "@babel/plugin-transform-react-jsx": "^7.22.5",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@craco/craco": "^7.1.0",
     "@testing-library/dom": "^8.19.0",
     "@types/lodash": "^4.14.189",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.13",
-    "craco": "^0.0.3",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.2.1",
     "eslint": "^8.0.1",
