chore: update .yarnrc

--- a/.yarnrc
+++ b/.yarnrc
@@ -3,3 +3,25 @@
 
 
 yarn-path ".yarn/releases/yarn-1.22.19.cjs"
+
+packageExtensions:
+  "eslint-plugin-flowtype@*":
+    peerDependencies:
+      "@babel/plugin-syntax-flow":
+        optional: true
+      "@babel/plugin-transform-react-jsx":
+        optional: true
+  "cosmiconfig-typescript-loader@*":
+    peerDependencies:
+      "@babel/plugin-syntax-flow":
+        optional: true
+  "cosmiconfig-typescript-loader@*":
+    peerDependencies:
+      "typescript":
+        optional: true
+      "@types/node":
+        optional: true
+  "autoprefixer@*":
+    peerDependencies:
+      "postcss":
+        optional: true
