chore: update .yarnrc

--- a/.yarnrc
+++ b/.yarnrc
@@ -6,22 +6,22 @@ yarn-path ".yarn/releases/yarn-1.22.19.cjs"
 
 packageExtensions:
   "eslint-plugin-flowtype@*":
-    peerDependencies:
+    peerDependenciesMeta:
       "@babel/plugin-syntax-flow":
         optional: true
       "@babel/plugin-transform-react-jsx":
         optional: true
   "cosmiconfig-typescript-loader@*":
-    peerDependencies:
+    peerDependenciesMeta:
       "@babel/plugin-syntax-flow":
         optional: true
   "cosmiconfig-typescript-loader@*":
-    peerDependencies:
+    peerDependenciesMeta:
       "typescript":
         optional: true
       "@types/node":
         optional: true
   "autoprefixer@*":
-    peerDependencies:
+    peerDependenciesMeta:
       "postcss":
         optional: true
