--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,3 +1,3 @@
 # Override the default install target to use pnpm install --no-frozen-lockfile
-[phases.build]
+[phases.install]
 cmds = ["pnpm install --no-frozen-lockfile"]
