chore: add envs to nixpacks.toml

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,3 +1,7 @@
 # Override the default install target to use pnpm install --no-frozen-lockfile
 [phases.install]
 cmds = ["pnpm install --no-frozen-lockfile"]
+
+[variables]
+NODE_ENV = "production"
+REACT_APP_RE_DASH_APP_NAME = "Encacap RE - Dashboard"
