--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
-  "name": "baolocre_dashboard",
-  "version": "0.1.0",
-  "private": true,
+  "browserslist": {
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ]
+  },
   "dependencies": {
     "@encacap-group/common": "^1.9.2",
     "@headlessui/react": "^1.7.4",
@@ -44,32 +53,6 @@
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
-  "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
-    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -105,12 +88,30 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.3"
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "lint-staged": {
-    "src/**/*.{jsx,tsx}": [
-      "eslint --fix --config .eslintrc.js"
-    ],
     "!(src/**/*.{jsx,tsx})": [
       "prettier --fix --ignore-unknown"
+    ],
+    "src/**/*.{jsx,tsx}": [
+      "eslint --fix --config .eslintrc.js"
     ]
-  }
+  },
+  "name": "itn-ere-fe-web-admin",
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "private": true,
+  "scripts": {
+    "build": "craco build",
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
+    "start": "craco start",
+    "test": "craco test"
+  },
+  "version": "0.1.0"
 }
